[package]
categories = ["javascript", "js", "browser", "v8", "ffi"]
edition = "2021"
name = "browserjs"
version = "0.0.0"
description = "library to evaluate javascript (v8) within the context of a non-emulated self-driven context acting like a browser"
homepage = "https://github.com/plabayo/browserjs"
readme = "../README.md"
keywords = ["io", "js", "browser", "javascript"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/plabayo/browserjs"

[dependencies]
